--- a/assets/styles/general/basic-layout.scss
+++ b/assets/styles/general/basic-layout.scss
@@ -32,7 +32,8 @@ body {
     background-size: cover;
     box-shadow: inset 0 0 300px 300px rgb(0 0 0 / 25%);
     content: '';
-    height: 100%;
+    min-height: 100vh; //fallback
+    min-height: -webkit-fill-available;
     left: 0;
     position: fixed;
     top: 0;
